--- a/scenarioA/services/my-account/MSCA/landing-page-ei.html
+++ b/scenarioA/services/my-account/MSCA/landing-page-ei.html
@@ -171,11 +171,12 @@
   <!-- Default panel contents -->
   <div class="panel-heading"><strong>On this page</strong></div>
   <div class="panel-body">
+	  <p><a href="#a1-1">Claims and application status</a></p>
   </div>
 
   <!-- List group -->
   <ul class="list-group">
-    <li class="list-group-item"><a href="#a1-1">Claims and application status</a></li>
+    
 	  <li class="list-group-item"><a href="#a1-1">Personal information</a></li>
 	  <li class="list-group-item"><a href="#a1-1">Payment and direct deposit</a></li>
 	  <li class="list-group-item"><a href="#a1-1">Alert me</a></li>
@@ -191,11 +192,11 @@
   <!-- Default panel contents -->
   <div class="panel-heading"><strong>Help and Support</strong></div>
   <div class="panel-body">
+	  <p><a href="">EI Forms</a></p>
   </div>
 
   <!-- List group -->
   <ul class="list-group">
-    <li class="list-group-item"><a href="">EI Forms</a></li>
 	  <li class="list-group-item"><a href="">Related services and information</a></li>
 	  <li class="list-group-item"><a href="">Contact us</a></li>
   </ul>
