--- a/scenarioA/services/my-account/MSCA/landing-page-cpp-oas.html
+++ b/scenarioA/services/my-account/MSCA/landing-page-cpp-oas.html
@@ -175,7 +175,7 @@ Gouvernement du Canada					</span>
 		</div>
 	</nav> 
 </header>			</div>
-  <section>
+  <section class="container">
     <h1 property="name" id="wb-cont" dir="ltr">Canada Pension Plan/Old Age Security</h1>
     <section class="alert alert-warning">
       <h2 class="h3">Attention</h2>
