--- a/scenarioA/services/my-account/MSCA/lobby-wax.html
+++ b/scenarioA/services/my-account/MSCA/lobby-wax.html
@@ -1,73 +1,149 @@
-<!DOCTYPE HTML>
-<html class="p_AFMaximized" dir="ltr" lang="en">
-				<head>
-				<meta http-equiv="X-UA-Compatible" content="IE=11.0">
-				<link rel="stylesheet" charset="UTF-8" type="text/css" href="/sc/sys2/msca-mdsc/portal-portail/pro/portal/page/portal/msca/private/adf/styles/cache/wet4-cdts-desktop-ucpovi-en-ltr-ie-s.css">
-				<link rel="stylesheet" charset="UTF-8" type="text/css" href="/sc/sys2/msca-mdsc/portal-portail/pro/portal/page/portal/msca/private/adf/styles/cache/wet4-cdts-desktop-ucpovi-en-ltr-ie-s2.css">
-				<meta charset="utf-8"/>
+<!DOCTYPE html>
+<!--[if lt IE 9]><html class="no-js lt-ie9" lang="en" dir="ltr"><![endif]-->
+<!--[if gt IE 8]><!-->
+<html class="no-js" lang="en" dir="ltr">
+<!--<![endif]-->
+<head>
+<meta charset="utf-8"/>
+<meta content="width=device-width,initial-scale=1" name="viewport"/>
 
-				<!-- Web Experience Toolkit (WET) / Boîte à outils de l'expérience Web (BOEW)
+<!-- Web Experience Toolkit (WET) / Boîte à outils de l'expérience Web (BOEW)
      wet-boew.github.io/wet-boew/License-en.html / wet-boew.github.io/wet-boew/Licence-fr.html -->
 
-				<meta content="width=device-width,initial-scale=1" name="viewport"/>
-
-				<!-- AA required metadata -->
-				<meta property="dcterms:language" content="eng"/>
-				<meta property="dcterms:title" content="My Service Canada Account"/>
-				<meta property="dcterms:creator" content="Employment and Social Development Canada"/>
-				<meta property="dcterms:service" content="MSCA-MDSC"/>
-				<meta property="dcterms:accessRights" content="1"/>
-				<!-- /AA required metadata -->
-
-				<script type="text/javascript" src="https://www.canada.ca/etc/designs/canada/cdts/gcweb/v4_0_30/cdts/compiled/soyutils.js"></script>
-				<script type="text/javascript" src="https://www.canada.ca/etc/designs/canada/cdts/gcweb/v4_0_30/cdts/compiled/wet-en.js"></script>
-				<noscript>
-                <!-- TODO write fallback code -->
-                </noscript>
-				<script type="text/javascript">
-					document.write(wet.builder.refTop({
-						cdnEnv : "prod",
-                                                isApplication : true,
-						localPath : ""
-					}));
-				</script>
-				<link rel="stylesheet" href="https://srv241-s2.lab.hrdc-drhc.gc.ca/sc/sys2/msca-mdsc/portal-portail/pro/portal/page/portal/msca/private/static-content/msca-mdsc/css/msca-cdtn.css"/>
-				<link rel="stylesheet" href="/cdtsapps.css"/>
-				<script src="//assets.adobedtm.com/caacec67651710193d2331efef325107c23a0145/satelliteLib-f34c683eb51dede6ab6ecb54f5f10fab7eb99c93-staging.js" type="text/javascript"></script>
-				<title>My Service Canada Account - Home</title>
-				</head>
-				<body class="af_document p_AFMaximized">
+<title>My Service Canada Account</title>
+<script type="text/javascript" src="https://www.canada.ca/etc/designs/canada/cdts/gcweb/v4_0_30/cdts/compiled/soyutils.js"></script>
+<script type="text/javascript" src="https://www.canada.ca/etc/designs/canada/cdts/gcweb/v4_0_30/cdts/compiled/wet-en.js"></script>
+<link href="https://srv241-s2.lab.hrdc-drhc.gc.ca/sc/sys2/msca-mdsc/portal-portail/pro/portal/page/portal/msca/private/static-content/msca-mdsc/css/msca-cdtn.css" rel="stylesheet"/>
 <noscript>
-                This page uses JavaScript and requires a JavaScript enabled browser.Your browser is not JavaScript enabled.
-                </noscript>
-<div id="afr::Splash" class="af_document_splash-screen">
-                  <div class="af_document_splash-screen-cell"><span class="af_document_splash-screen-content"><img src="/sc/sys2/msca-mdsc/portal-portail/pro/portal/page/portal/msca/private/static-content/msca-mdsc/img/icon_flag_rotation_080x080.gif" border="0" style="margin:5px" alt=""><span class="af_document_splash-screen-message">Loading...</span></span></div>
-                </div>
-<script type="text/javascript" src="/sc/sys2/msca-mdsc/portal-portail/pro/portal/page/portal/msca/private/adf/jsLibs/Locale1_2_12_3_3.js"></script><script type="text/javascript">var AdfAssert = new Object();AdfAssert.DEBUG = false;</script><script type="text/javascript" src="/sc/sys2/msca-mdsc/portal-portail/pro/portal/page/portal/msca/private/afr/partition/ie/n/default/opt/boot-11.1.1.9.0-7306.js"></script><script type="text/javascript">AdfLogger.DEFAULT_LEVEL=AdfLogger.OFF;(AdfLogger.LOGGER=new AdfLogger('global', new AdfBufferedLogWriter())).register();var checkAgentSupport = true;AdfAgent._UNSUPPORTED_BROWSER_ALERT="You are using an un-supported browser.  Please refer to the application documentation for the exact browser versions supported.";var checkBrowserMode="hide";AdfAgent._UNSUPPORTED_BROWSER_MODE_ALERT="The current compatibility setting is not supported. Disable Compatibility View before running this web page.";AdfAgent.AGENT = AdfAgent.getAgent(window);var lookAndFeel = new AdfDhtmlLookAndFeel(window);AdfAgent._LOG_WRITERS = "NativeLogWriter";AdfPage.PAGE = lookAndFeel.createPage();var page = AdfPage.PAGE;page.setBaseResourceUrl("/sc/sys2/msca-mdsc/portal-portail/pro/portal/page/portal/msca/private");page.__setAutomationEnabled(false);page.setAnimationEnabled(true);page.__setSessionIdentifier('1amtytasdc');page.__setOutputMode('default');</script><script type="text/javascript" src="/sc/sys2/msca-mdsc/portal-portail/pro/portal/page/portal/msca/private/afr/partition/ie/n/default/opt/core-11.1.1.9.0-7306.js"></script><script type="text/javascript" src="/sc/sys2/msca-mdsc/portal-portail/pro/portal/page/portal/msca/private/afr/AdfTranslations-11.1.1.9.0-7306en.js?loc=en&amp;skinId=wet4-cdts.desktop"></script>
-<iframe name="afr::PushIframe" id="afr::PushIframe" style="display:none" src="/sc/sys2/msca-mdsc/portal-portail/pro/portal/page/portal/msca/private/afr/blank.html"></iframe>
-<input type="hidden" id="oracle.adf.view.faces.RICH_UPDATE">
-<div id="document">
-<a id="document::skip" href="#" class="af_document_skip-link">Skip to content</a><span id="pageTemplate:pt_pg_template" class="af_panelGroupLayout">
-                <div id="def-top"></div>
-                <script type="text/javascript">var defTop = document.getElementById("def-top");
-                        defTop.outerHTML = wet.builder.appTop({
-                                cdnEnv : "prod",
-                                appName : [{
-                                        text : "My Service Canada Account",
-                                        href : "/MSCA-Prototype/scenarioA/services/my-account/MSCA/lobby-wax.html"
-                                }],appSettings : [{ 
-                                        href: "https://srv241-s2.lab.hrdc-drhc.gc.ca/ecas-seca/rascl_sys2/SCL/SQE.aspx?Lang=eng"
-                                    }],signOut: [{ href: "https://srv241-s2.lab.hrdc-drhc.gc.ca/sc/sys2/msca-mdsc/portal-portail/pro/portal/page/portal/msca/private/logout" }],
-                                search : false,
-                                siteMenu: false,
-                                breadcrumbs: [  ],
-                                lngLinks : [{
-                                        lang : "fr",
-                                        href : "/sc/sys2/msca-mdsc/portal-portail/pro/portal/page/portal/msca/private/faces/oracle/webcenter/portalapp/pages/home.jspx?_adf.ctrl-state=51tdc29ez_4&lang=fra",
-                                        text : "Français"
-                                }],
-                                localPath : ""
-                        });</script><span id="pageTemplate:pt_pg_content" class="af_panelGroupLayout">
+<!--[if gte IE 9 | !IE ]><!-->
+<link href="https://www.canada.ca/etc/designs/canada/cdts/gcweb/v4_0_29/assets/favicon.ico" rel="icon" type="image/x-icon"/>
+<link rel="stylesheet" href="https://www.canada.ca/etc/designs/canada/cdts/gcweb/v4_0_29/css/theme.min.css"/>
+<link rel="stylesheet" href="https://www.canada.ca/etc/designs/canada/cdts/gcweb/v4_0_29/cdts/cdtsfixes.css"/>
+<link rel="stylesheet" href="https://www.canada.ca/etc/designs/canada/cdts/gcweb/v4_0_29/cdts/cdtsapps.css"/>
+<!--<![endif]-->
+
+<!--[if lt IE 9]>
+				<link href="https://www.canada.ca/etc/designs/canada/cdts/gcweb/v4_0_29/assets/favicon.ico" rel="shortcut icon"/>
+				<link rel="stylesheet" href="https://www.canada.ca/etc/designs/canada/cdts/gcweb/v4_0_29/css/ie8-theme.min.css"/>
+				<![endif]-->
+
+<!--[if lte IE 9]><![endif]-->
+<link rel="stylesheet" href="https://www.canada.ca/etc/designs/canada/cdts/gcweb/v4_0_29/css/noscript.min.css"/>
+<link rel="stylesheet" href="https://www.canada.ca/etc/designs/canada/cdts/gcweb/v4_0_29/cdts/cdtsnoscript.css"/>
+
+<!--[if gte IE 9 | !IE ]><!-->
+<link href="https://www.canada.ca/etc/designs/canada/cdts/gcweb/v4_0_26/assets/favicon.ico" rel="icon" type="image/x-icon">
+<link rel="stylesheet" href="https://www.canada.ca/etc/designs/canada/cdts/gcweb/v4_0_26/css/theme.min.css">
+<link rel="stylesheet" href="https://www.canada.ca/etc/designs/canada/cdts/gcweb/v4_0_26/cdts/cdtsfixes.css">
+<!-- Are you using the application templates? If so add the following CSS file -->
+<link rel="stylesheet" href="https://www.canada.ca/etc/designs/canada/cdts/gcweb/v4_0_26/cdts/cdtsapps.css">
+<!--<![endif]-->
+<!--[if lt IE 9]>
+<link href="https://www.canada.ca/etc/designs/canada/cdts/gcweb/v4_0_26/assets/favicon.ico" rel="shortcut icon" />
+<link rel="stylesheet" href="https://www.canada.ca/etc/designs/canada/cdts/gcweb/v4_0_26/css/ie8-theme.min.css" />
+<![endif]-->
+<!--[if lte IE 9]><![endif]-->
+<link rel="stylesheet" href="https://www.canada.ca/etc/designs/canada/cdts/gcweb/v4_0_26/css/noscript.min.css" />
+<link rel="stylesheet" href="https://www.canada.ca/etc/designs/canada/cdts/gcweb/v4_0_26/cdts/cdtsnoscript.css" />
+</noscript>
+<script type="text/javascript">document.write(wet.builder.refTop({ cdnEnv: "AKAMAI", isApplication: true }))</script>
+<style>
+.modal-footer {
+	background-color: #FFF
+}
+</style>
+</head>
+
+<body vocab="http://schema.org/" typeof="WebPage">
+<div id="def-top">
+  <ul id="wb-tphp">
+    <li class="wb-slc"><a class="wb-sl" href="#wb-cont">Skip to main content</a></li>
+    <li class="wb-slc visible-sm visible-md visible-lg"><a class="wb-sl" href="#wb-info">Skip to "About this application"</a></li>
+    <li class="wb-slc visible-md visible-lg"><a class="wb-sl" href="#wb-sec">Skip to section menu</a></li>
+  </ul>
+  <header role="banner">
+    <div id="wb-bnr" class="container">
+      <div class="row">
+        <div class="brand col-xs-9 col-sm-8 col-md-6">
+          <object type="image/svg+xml" tabindex="-1" data="https://www.canada.ca/etc/designs/canada/cdts/gcweb/v4_0_29/assets/sig-blk-en.svg">
+          </object>
+          <span class="wb-inv"> <span> Government of Canada </span> <span>/</span> <span lang="fr"> Gouvernement du Canada </span> </span> </div>
+        <section id="wb-lng" class="text-right col-xs-3 col-sm-4 col-md-6">
+          <h2 class="wb-inv">Language selection</h2>
+          <ul class="list-inline margin-bottom-none">
+            <li><a lang="fr" href="###">Français</a></li>
+          </ul>
+        </section>
+      </div>
+    </div>
+    <div class="app-bar">
+      <div class="container">
+        <div class="row">
+          <section class="col-sm-7">
+            <h2 class="wb-inv">My Service Canada Account</h2>
+            <a class="app-name" href="/MSCA-Prototype/scenarioA/services/my-account/MSCA/lobby-wax.html">My Service Canada Account</a> </section>
+          <nav class="col-sm-5 hidden-xs hidden-print" role="navigation">
+            <h2 class="wb-inv">Account menu</h2>
+            <ul class="app-list-account list-unstyled">
+              <li><a href="###" class="btn"><span class="glyphicon glyphicon-cog" aria-hidden="true"></span> Account Settings</a></li>
+              <li><a href="###" class="btn"><span class="glyphicon glyphicon-off" aria-hidden="true"></span> Sign Out</a></li>
+            </ul>
+          </nav>
+        </div>
+      </div>
+    </div>
+    <div class="app-bar-mb container visible-xs-block hidden-print">
+      <nav role="navigation">
+        <h2 class="wb-inv">Search and menu</h2>
+        <ul class="app-list-main list-unstyled">
+          <li class="wb-mb-links" id="wb-glb-mn"><a href="#mb-pnl" aria-controls="mb-pnl" class="btn overlay-lnk" role="button">Menu</a>
+            <h2>Menu</h2>
+          </li>
+        </ul>
+        <div id="mb-pnl"></div>
+      </nav>
+    </div>
+    <nav role="navigation" id="wb-sm" data-trgt="mb-pnl" class="wb-menu visible-md visible-lg" typeof="SiteNavigationElement">
+      <div class="pnl-strt container nvbar" lang="en">
+        <h2 class="wb-inv">Topics menu</h2>
+        <div class="row">
+          <ul class="list-inline menu" role="menubar">
+            <li> <a
+ href="/MSCA-Prototype/scenarioA/services/my-account/MSCA/lobby-wax.html">Home</a> </li>
+            <li> <a href="#section1" class="item">Employment Insurance</a>
+              <ul class="sm list-unstyled" id="section1" role="menu">
+                <li><a href="###" target="_self">Status of my EI claim/application</a></li>
+                <li><a href="###" target="_self">Payment information</a></li>
+                <li><a href="###" target="_self">Latest EI claim details</a></li>
+                <li><a href="###" target="_self">Records of Employment</a></li>
+                <li><a href="/MSCA-Prototype/scenarioA/services/my-account/MSCA/landing-page-ei.html" target="_self">Employment Insurance - More</a></li>
+              </ul>
+            </li>
+            <li> <a href="#section2" class="item">Canada Pension Plan/Old Age Security</a>
+              <ul class="sm list-unstyled" id="section2" role="menu">
+                <li> <a href="###" target="_blank"> CPP contributions </a> </li>
+                <li> <a href="###" target="_blank"> Payment information </a> </li>
+                <li> <a href="###" target="_blank"> Estimated monthly CPP benefits </a> </li>
+                <li> <a href="###" target="_blank"> Application status </a> </li>
+                <li> <a href="/MSCA-Prototype/scenarioA/services/my-account/MSCA/landing-page-cpp-oas.html" target="_blank"> Canada Pension Plan/Old Age Security - More </a> </li>
+              </ul>
+            </li>
+          </ul>
+        </div>
+      </div>
+    </nav>
+    <nav role="navigation" id="wb-bc" property="breadcrumb">
+      <h2>You are here:</h2>
+      <div class="container">
+        <div class="row">
+          <ol class="breadcrumb">
+            <li><a href="/MSCA-Prototype/scenarioA/services/my-account/MSCA/lobby-wax.html">My Service Canada Account</a></li>
+          </ol>
+        </div>
+      </div>
+    </nav>
+  </header>
+</div>
 <main class="container" property="mainContentOfPage" role="main"><span id="pageTemplate:j_id__ctru6pc6" class="af_panelGroupLayout">
   <h1 class="wb-inv" id="wb-cont" property="name">My Service Canada Account</h1>
   <div class="mrgn-tp-lg">
