--- a/scenarioA/services/my-account/MSCA/landing-page-ei.html
+++ b/scenarioA/services/my-account/MSCA/landing-page-ei.html
@@ -112,20 +112,20 @@
  href="/MSCA-Prototype/scenarioA/services/my-account/MSCA/lobby-wax.html">Home</a> </li>
             <li> <a href="#section1" class="item">Employment Insurance</a>
               <ul class="sm list-unstyled" id="section1" role="menu">
-                <li><a href="###" target="_self">Status of my EI claim/application</a></li>
-                <li><a href="###" target="_self">Payment information</a></li>
-                <li><a href="###" target="_self">Latest EI claim details</a></li>
-                <li><a href="###" target="_self">Records of Employment</a></li>
-                <li><a href="/MSCA-Prototype/scenarioA/services/my-account/MSCA/landing-page-ei.html" target="_self">Employment Insurance - More</a></li>
+                <li><a href="###">Status of my EI claim/application</a></li>
+                <li><a href="###">Payment information</a></li>
+                <li><a href="###">Latest EI claim details</a></li>
+                <li><a href="###">Records of Employment</a></li>
+                <li><a href="/MSCA-Prototype/scenarioA/services/my-account/MSCA/landing-page-ei.html">Employment Insurance - More</a></li>
               </ul>
             </li>
             <li> <a href="#section2" class="item">Canada Pension Plan/Old Age Security</a>
               <ul class="sm list-unstyled" id="section2" role="menu">
-                <li> <a href="###" target="_blank"> CPP contributions </a> </li>
-                <li> <a href="###" target="_blank"> Payment information </a> </li>
-                <li> <a href="###" target="_blank"> Estimated monthly CPP benefits </a> </li>
-                <li> <a href="###" target="_blank"> Application status </a> </li>
-                <li> <a href="/MSCA-Prototype/scenarioA/services/my-account/MSCA/landing-page-cpp-oas.html" target="_blank"> Canada Pension Plan/Old Age Security - More </a> </li>
+                <li> <a href="###"> CPP contributions </a> </li>
+                <li> <a href="###"> Payment information </a> </li>
+                <li> <a href="###"> Estimated monthly CPP benefits </a> </li>
+                <li> <a href="###"> Application status </a> </li>
+                <li> <a href="/MSCA-Prototype/scenarioA/services/my-account/MSCA/landing-page-cpp-oas.html"> Canada Pension Plan/Old Age Security - More </a> </li>
               </ul>
             </li>
           </ul>
