--- a/scenarioA/services/my-account/MSCA/landing-page-ei.html
+++ b/scenarioA/services/my-account/MSCA/landing-page-ei.html
@@ -151,7 +151,7 @@
     <p>Please be advised that this service will be unavailable from 6:00 a.m. to 8:00 a.m. on Sunday, March 17, 2019 (Eastern Time) to permit system maintenance. We apologize for any inconvenience. </p>
   </section>
   <div class="row">
-    <div class="list-group col-xs-12 col-md-3 pull-right">
+    <div class="col-xs-12 col-md-3 pull-right">
       <div class="panel panel-default"> 
         <!-- Default panel contents -->
         <div class="panel-heading"><strong>On this page</strong></div>
@@ -181,7 +181,7 @@
         </ul>
       </div>
     </div>
-    <div class="col-md-9">
+    <div class="col-xs-12 col-md-9">
       <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut euismod justo eget ligula porttitor, at imperdiet quam elementum. Suspendisse aliquet purus ante, vitae molestie dui euismod vitae. Curabitur efficitur nibh turpis.</p>
       <div class="panel panel-default">
         <div class="panel-body">
