--- a/scenarioA/services/my-account/MSCA/lobby-redesign.html
+++ b/scenarioA/services/my-account/MSCA/lobby-redesign.html
@@ -90,9 +90,9 @@
 	<div class="container">
 		<h2 class="h3 mrgn-tp-md">Most requested</h2>
 		<ul class="wb-eqht list-unstyled mrgn-tp-md mrgn-bttm-md list-responsive">
-			<li><a href="/en/government/sign-in-online-account.html">View my EI status</a></li>
-			<li><a href="/en/services/benefits/ei.html">View my EI payment <br />information</a></li>
-			<li><a href="/en/immigration-refugees-citizenship/services/canadian-passports.html">View my latest EI claim</a></li>
+			<li><a href="/en/government/sign-in-online-account.html">View my EI status and correspondence</a></li>
+			<li><a href="/en/services/benefits/ei.html">View my <br />EI/CPP/OAS Tax Slips (T4E, T4A, NR4)</a></li>
+			<li><a href="/en/immigration-refugees-citizenship/services/canadian-passports.html">View my EI payment<br />information</a></li>
 			<li><a href="http://weather.gc.ca/?&amp;wb48617274=F4EE897A">View my Records of <br />Employment</a></li>
 			<li><a href="/en/services/benefits/publicpensions.html">Complete my EI report <br />online</a></li>
 			
