--- a/scenarioA/services/my-account/MSCA/lobby-redesign-fr.html
+++ b/scenarioA/services/my-account/MSCA/lobby-redesign-fr.html
@@ -89,11 +89,11 @@
 	<div class="container">
 		<h2 class="h3 mrgn-tp-md">Services les plus demandés</h2>
 		<ul class="wb-eqht list-unstyled mrgn-tp-md mrgn-bttm-md list-responsive">
-			<li><a href="/en/government/sign-in-online-account.html">Visualiser l'état de ma demande d'a.-e. et ma correspondance</a></li>
-			<li><a href="/en/services/benefits/ei.html">Visualiser ma dernière demande d'a.-e.</a></li>
-			<li><a href="/en/immigration-refugees-citizenship/services/canadian-passports.html">Visualiser mes renseignements de paiements d'a.-e.</a></li>
-			<li><a href="http://weather.gc.ca/?&amp;wb48617274=F4EE897A">Visualiser mes relevés d'emploi</a></li>
-			<li><a href="/en/services/benefits/publicpensions.html">Remplir ma déclaration d'a.-e. en ligne <span class="glyphicon glyphicon-new-window"></span></a></li>
+			<li><a href="https://srv241-s2.lab.hrdc-drhc.gc.ca/sc/sys2/msca-mdsc/portal-portail/pro/portal/page/portal/msca/private/faces/oracle/webcenter/portalapp/pages/ei-correspondence.jspx">Visualiser l'état de ma <br />demande d'a.-e. et ma <br />correspondance</a><br />&nbsp;</li>
+			<li><a href="https://srv241-s2.lab.hrdc-drhc.gc.ca/sc/sys2/msca-mdsc/portal-portail/pro/tiso-frfd/view-tax-slips.action">Visualiser mon feuillet de <br />renseignements fiscaux pour <br /></b>l'a.-e., le RPC ou la SV (T4E,<br />T4A, NR4)</a></li>
+			<li><a href="https://srv241-s2.lab.hrdc-drhc.gc.ca/sc/sys2/msca-mdsc/portal-portail/pro/ei-ae/meiio-mraed_II/Pages/MyPayments.aspx?prov=13">Visualiser mes <br />renseignements de <br />paiements d'a.-e.</a></li>
+			<li><a href="https://srv241-s2.lab.hrdc-drhc.gc.ca/sc/sys2/msca-mdsc/portal-portail/pro/ei-ae/meiio-mraed_II/Pages/MyRoeList.aspx?prov=13">Visualiser mes relevés d'emploi</a></li>
+			<li><a href="">Remplir ma déclaration d'a.-e. en ligne <span class="glyphicon glyphicon-new-window"></span></a></li>
 			
 		</ul>
 	</div>
