--- a/scenarioA/services/my-account/MSCA/lobby-redesign.html
+++ b/scenarioA/services/my-account/MSCA/lobby-redesign.html
@@ -90,7 +90,7 @@
 	<div class="container">
 		<h2 class="h3 mrgn-tp-md">Most requested</h2>
 		<ul class="wb-eqht list-unstyled mrgn-tp-md mrgn-bttm-md list-responsive">
-			<li><a href="https://srv241-s2.lab.hrdc-drhc.gc.ca/sc/sys2/msca-mdsc/portal-portail/pro/portal/page/portal/msca/private/faces/oracle/webcenter/portalapp/pages/ei-correspondence.jspx">View my EI status and <br />correspondence</a></li>
+			<li><a href="https://srv241-s2.lab.hrdc-drhc.gc.ca/sc/sys2/msca-mdsc/portal-portail/pro/portal/page/portal/msca/private/faces/oracle/webcenter/portalapp/pages/ei-correspondence.jspx">View my EI status and <br />correspondence</a><br />&nbsp;</li>
 			<li><a href="https://srv241-s2.lab.hrdc-drhc.gc.ca/sc/sys2/msca-mdsc/portal-portail/pro/tiso-frfd/view-tax-slips.action">View my EI/CPP/OAS Tax <br />Slips (T4E, T4A, NR4)</a></li>
 			<li><a href="https://srv241-s2.lab.hrdc-drhc.gc.ca/sc/sys2/msca-mdsc/portal-portail/pro/ei-ae/meiio-mraed_II/Pages/MyPayments.aspx?prov=13">View my EI payment<br />information</a></li>
 			<li><a href="https://srv241-s2.lab.hrdc-drhc.gc.ca/sc/sys2/msca-mdsc/portal-portail/pro/ei-ae/meiio-mraed_II/Pages/MyRoeList.aspx?prov=13">View my Records of <br />Employment</a></li>
