--- a/scenarioA/services/my-account/MSCA/landing-page-ei.html
+++ b/scenarioA/services/my-account/MSCA/landing-page-ei.html
@@ -148,12 +148,10 @@
   <h1 property="name" id="wb-cont" dir="ltr">Employment Insurance</h1>
   <section class="alert alert-info">
     <h2 class="h3">Get your tax slips online</h2>
-    <p>You can choose to get your T4E, T4A and NR4 slips online instead of by mail. Make the change under <a href="">Tax slip mailing options</a>. Do it before January 1, 2020 to receive this year's slips online. They are official documents, you can print them out and attach them to your income tax return.</p>
+    <p>You can choose to get your T4E, T4A and NR4 slips online instead of by mail. Make the change under <a href="">Tax slip mailing options</a>. Do it before January 1, 2020 to receive this year's slips online. They are official documents, you can print them out and attach them to your income tax return.</p><br />
+	  <p>T4E, T4A and NR4 tax slips will be available <strong>online</strong> through My Service Canada Account the <strong>first week of February</strong>.</p><br />
 
-<p>T4E, T4A and NR4 tax slips will be available <strong>online</strong> through My Service Canada Account the <strong>first week of February</strong>.</p>
-
-<p><strong>Paper tax slips</strong> will be mailed by the <strong>end of February</strong>. Please check that your mailing address is correct in My Service Canada Account.
-</p>
+<p><strong>Paper tax slips</strong> will be mailed by the <strong>end of February</strong>. Please check that your mailing address is correct in My Service Canada Account.</p>
   </section>
   <div class="row">
     <div class="col-xs-12 col-md-3 pull-right">
