--- a/scenarioA/services/my-account/MSCA/EI/EI-Landing-Page/landingpg-w-anchorlinks.html
+++ b/scenarioA/services/my-account/MSCA/EI/EI-Landing-Page/landingpg-w-anchorlinks.html
@@ -80,8 +80,8 @@
       <div class="container">
         <div class="row">
           <section class="col-sm-7">
-            <h2 class="wb-inv">My Service Canada Account</h2>
-            <a class="app-name" href="/MSCA-Prototype/scenarioA/services/my-account/MSCA/lobby-wax.html">My Service Canada Account</a> </section>
+            <h2 class="wb-inv">My Service Canada Account (MSCA)</h2>
+            <a class="app-name" href="/MSCA-Prototype/scenarioA/services/my-account/MSCA/lobby-wax.html">My Service Canada Account (MSCA)</a> </section>
           <nav class="col-sm-5 hidden-xs hidden-print" role="navigation">
             <h2 class="wb-inv">Account menu</h2>
             <ul class="app-list-account list-unstyled">
@@ -178,7 +178,7 @@
    </section>
    
    <section>
-<h2>EI claims, application status, and correspondence</h2>
+<h3>EI claims, application status, and correspondence</h3>
         <ul>
         <li><a href="###">View my claim/application status and correspondence</a></li>
         <li><a href="###">Register for Alert Me</a></li>
@@ -188,7 +188,7 @@
 </section>
    
    <section>
-<h2>Payment and direct deposit</h2>
+<h3>Payment and direct deposit</h3>
         <ul>
         <li><a href="###">View my payment information</a></li>
         <li><a href="###">Direct deposit (EI)</a></li>
@@ -196,7 +196,7 @@
 </section>
   
 	<section>
-<h2>Records of Employment</h2>
+<h3>Records of Employment</h3>
         <ul>
         <li><a href="###">View my Records of Employment</a></li>
         <li><strong>Related form:</strong><a href="###">INS3166 - Request for Record of Employment</a></li>
@@ -204,7 +204,7 @@
 </section>
   
   <section>
-<h2>My EI report</h2>
+<h3>My EI report</h3>
         <ul>
         <li><a href="###">Complete my EI report online</a></li>
         <li><a href="###">I made a mistake on my EI report</a></li>
@@ -212,7 +212,7 @@
 </section>
 
 <section>
-<h2>eForms (e.g. training; absence from Canada)</h2>
+<h3>eForms (e.g. training; absence from Canada)</h3>
 <p><a href="###">Fill out an eForm</a> to tell us about:</p>
         <ul>
         <li>An absence from Canada (vacation and other reasons); and/or</li>
@@ -226,7 +226,7 @@
 </section>
   
   <section>
-<h2>My contact/personal information for EI</h2>
+<h3>My contact/personal information for EI</h3>
         <ul>
         <li><a href="###">My mailing address and telephone number</a></li>
         <li><a href="###">Register for Alert Me</a></li>
@@ -241,7 +241,7 @@
 </section>
   
    <section>
-<h2>Tax slips for EI</h2>
+<h3>Tax slips for EI</h3>
         <ul>
         <li><a href="###">Tax slips (T4E)</a></li>
         <li><a href="###">Tax slips mailing options</a></li>
@@ -249,7 +249,7 @@
 </section>
 
 <section>
-<h2>EI for the self-employed</h2>
+<h3>EI for the self-employed</h3>
         <ul>
         <li><a href="###">Register for EI for the Self-Employed</a></li>
         <li><a href="###">Agreement status for Self-Employed EI</a></li>
@@ -261,7 +261,7 @@
 </section>
 
 <section>
-<h3>General EI forms</h3>
+<h4>General EI forms</h4>
         <ul>
         <li><a href="###">INS3124 - Individual’s consent to disclosure and/or use of personal information</a></li>
         <li><a href="###">INS3166 -  Request for Record of Employment</a></li>
@@ -270,7 +270,7 @@
 </section>
 
 <section>
-<h3>Family Caregiver and Compassionate Care Benefits forms</h3>
+<h4>Family Caregiver and Compassionate Care Benefits forms</h4>
         <ul>
         <li><a href="###">INS5223 – Family member attestation for Employment Insurance Family Caregiver Benefits or Compassionate Care Benefits</a></li>
         <li><a href="###">INS5216A - Authorization to release a Medical Certificate for Employment Insurance</a></li>
@@ -282,25 +282,25 @@
 
 
 <section>
-<h3>Sickness Benefits form</h3>
+<h4>Sickness Benefits form</h4>
         <ul>
         <li><a href="###">INS5223 – Family member attestation for Employment Insurance Family Caregiver Benefits or Compassionate Care Benefits</a></li>
         </ul>
 </section>
 
 <section>
-<h3>Maternity and/or Parental Benefits form</h3>
+<h4>Maternity and/or Parental Benefits form</h4>
         <ul>
         <li><a href="###">INS5168 – Maternity and/or Parental benefits Annex 3</a></li>
         </ul>
 </section>
 
 <section>
-<h3><a href="###">All EI forms</a></h3>
+<h4><a href="###">All EI forms</a></h4>
 </section>
 
 <section>
-<h2>Related services and information (EI)</h2>
+<h3>Related services and information (EI)</h3>
         <ul>
         <li><a href="###">Apply for EI online</a></li>
         <li><a href="###">Appeal an EI decision</a></li>
@@ -311,7 +311,7 @@
 </section>
 
 <section>
-<h2>Contact EI</h2>
+<h3>Contact EI</h3>
         <ul>
         <li><a href="###">Call EI</a></li>
         <li><a href="###">Visit EI in person</a></li>
