--- a/scenarioA/services/my-account/MSCA/EI/EI-Landing-Page/landingpg-w-anchorlinks.html
+++ b/scenarioA/services/my-account/MSCA/EI/EI-Landing-Page/landingpg-w-anchorlinks.html
@@ -218,7 +218,7 @@
         <li>An absence from Canada (vacation and other reasons); and/or</li>
         <li>A course or training program</li>
         </ul>
-        <br><p>Access your current draft and/or past eForms:</p></br>
+        <p>Access your current draft and/or past eForms:</p>
         <ul>
         <li><a href="###">Draft eForms</a></li>
         <li><a href="###">Completed eForms</a></li>
