--- a/scenarioA/services/my-account/MSCA/EI/EI-Landing-Page/landingpg-w-anchorlinks.html
+++ b/scenarioA/services/my-account/MSCA/EI/EI-Landing-Page/landingpg-w-anchorlinks.html
@@ -233,7 +233,7 @@
         <li><a href="###">My province of residence</a></li>
         <li><a href="###">My preferred language for written communications</a></li>
         </ul>
-       <br> <strong>Related forms:</stong> </br>
+       <br> <strong>Related forms:</strong> </br>
        <ul>
        <li><a href="###">INS3124 - Individual’s consent to disclosure and/or use of personal information</a></li>
        <li><a href="###">INS3280 - Appointment of representative</a></li>
