--- a/scenarioA/services/my-account/MSCA/EI/latest-claim-status.html
+++ b/scenarioA/services/my-account/MSCA/EI/latest-claim-status.html
@@ -82,7 +82,7 @@
         <div class="row">
           <section class="col-sm-7">
             <h2 class="wb-inv">My Service Canada Account</h2>
-            <a class="app-name" href="/MSCA-Prototype/scenarioA/services/my-account/MSCA/lobby-wax.html">MSCA</a> </section>
+            <a class="app-name" href="/MSCA-Prototype/scenarioA/services/my-account/MSCA/lobby-wax.html">My Service Canada Account</a> </section>
           <nav class="col-sm-5 hidden-xs hidden-print" role="navigation">
             <h2 class="wb-inv">Account menu</h2>
             <ul class="app-list-account list-unstyled">
@@ -138,7 +138,7 @@
       <div class="container">
         <div class="row">
           <ol class="breadcrumb">
-            <li><a href="/MSCA-Prototype/scenarioA/services/my-account/MSCA/lobby-wax.html">MSCA</a></li>
+            <li><a href="/MSCA-Prototype/scenarioA/services/my-account/MSCA/lobby-wax.html">MSCA</a> > <a href="#">EI</a> > Latest Claim Status</li>
           </ol>
         </div>
       </div>
@@ -163,8 +163,10 @@
         
         <!-- List group -->
         <ul class="list-group">
-          <li class="list-group-item">You can receive alerts on the latest updates to your EI claim/application if you <a href="#">register for Alert Me</a></li>
-          <li class="list-group-item">"View my status and correspondence" feature was introduced in 2016.  If you had an EI claim that started before 2016, find it in your <a href="#">latest claim details</a> or <a href="#">past claim details</a></li>
+          <li class="list-group-item">
+		<li>You can receive alerts on the latest updates to your EI claim/application if you <a href="#">register for Alert Me</a></li>
+		<li>"View my status and correspondence" feature was introduced in 2016.  If you had an EI claim that started before 2016, find it in your <a href="#">latest claim details</a> or <a href="#">past claim details</a></li>
+		</li>
         </ul>
     </div>
   <h2>Latest updates to my EI claim/application: </h2>
