--- a/scenarioA/services/my-account/MSCA/EI/latest-claim-status.html
+++ b/scenarioA/services/my-account/MSCA/EI/latest-claim-status.html
@@ -152,10 +152,9 @@
   <a class="btn btn-default" href="#" role="button">Help</a><br>
   <h1 property="name" id="wb-cont" dir="ltr">Latest claim status</h1>
   
-  <section class="jumbotron">
-<p>The status of your claim/application, relevant to the most recent message posted below is <strong>Decision Made</strong>.</p>
-</section>
-  
+  <div class="well well-sm">
+	  The status of your claim/application, relevant to the most recent message posted below is <strong>Decision Made</strong>.
+	</div>
   
   <div class="panel panel-default"> 
         <!-- Default panel contents -->
@@ -164,8 +163,8 @@
         <!-- List group -->
         <ul class="list-group">
           <li class="list-group-item">
-		<li>You can receive alerts on the latest updates to your EI claim/application if you <a href="#">register for Alert Me</a></li>
-		<li>"View my status and correspondence" feature was introduced in 2016.  If you had an EI claim that started before 2016, find it in your <a href="#">latest claim details</a> or <a href="#">past claim details</a></li>
+		You can receive alerts on the latest updates to your EI claim/application if you <a href="#">register for Alert Me</a>
+		"View my status and correspondence" feature was introduced in 2016.  If you had an EI claim that started before 2016, find it in your <a href="#">latest claim details</a> or <a href="#">past claim details</a>
 		</li>
         </ul>
     </div>
