--- a/scenarioA/services/my-account/MSCA/EI/latest-claim-status.html
+++ b/scenarioA/services/my-account/MSCA/EI/latest-claim-status.html
@@ -163,8 +163,10 @@
         <!-- List group -->
         <ul class="list-group">
           <li class="list-group-item">
-		You can receive alerts on the latest updates to your EI claim/application if you <a href="#">register for Alert Me</a>
-		"View my status and correspondence" feature was introduced in 2016.  If you had an EI claim that started before 2016, find it in your <a href="#">latest claim details</a> or <a href="#">past claim details</a>
+		  <ul>
+			<li>You can receive alerts on the latest updates to your EI claim/application if you <a href="#">register for Alert Me</a></li>
+			<li>"View my status and correspondence" feature was introduced in 2016.  If you had an EI claim that started before 2016, find it in your <a href="#">latest claim details</a> or <a href="#">past claim details</a></li>
+		  </ul>
 		</li>
         </ul>
     </div>
