--- a/scenarioA/services/my-account/MSCA/EI/latest-claim-status.html
+++ b/scenarioA/services/my-account/MSCA/EI/latest-claim-status.html
@@ -172,7 +172,49 @@
     </div>
   <h2>Latest updates to my EI claim/application: </h2>
   
+ <div class="accordion">
   
+ 		<!-- Accordion section 1 -->
+ 		<details class="acc-group">
+ 			<summary class="wb-toggle tgl-tab" data-toggle='{"parent": ".accordion", "group": ".acc-group"}'>2018-11-30 - Decision Made <br> Claim Finalized</summary>
+ 			<div class="tgl-panel">
+ 				<p>We have finalized your claim for Employment Insurance benefits. You can <a href="">view your latest claim information here</a>.</p><br><br>
+
+				<p>If you are required to submit reports, visit <a href="">Internet Reporting Service</a> to complete your reports.</p>
+
+ 			</div>
+ 		</details>
+ 
+ 		<!-- Accordion section 2 -->
+ 		<details class="acc-group">
+ 			<summary class="wb-toggle tgl-tab" data-toggle='{"parent": ".accordion", "group": ".acc-group"}'>2018-10-30 - Under Review<br>Application Under Review</summary>
+ 			<div class="tgl-panel">
+				<p><strong>We've received your Employment Insurance application</strong>.<br>
+					We’re working to process your request and complete your claim in a reasonable amount of time. Once we finish our review:</p>
+				<ul>
+					<li>You’ll find our decision on this page</li>
+					<li>We’ll update your claim information</li>
+				</ul><br><br>
+				<strong>Record of Employment</strong><br>
+				<p>Make sure you’ve requested your Record of Employment (ROEs) from your employer(s).</p><br><br>
+				<ul>
+					<li>If your employer gave you <strong>paper</strong> ROEs, you don't need to take any futher action.</li>
+					<ul>
+						<li>visiting the <a href="">nearest Service Canada office; or</a></li>
+						<li>mailing them to Service Canada</li>
+					</ul>
+					<li>You can <a href="">view your ROEs here</a></li>
+				</ul>
+				<p>If your employer(s) submitted all of your ROEs, you don't need to take any further action.<br>For more information on ROEs and when they should be issued, see <a href="">information on Records of Employment.</a></p>
+					
+ 			</div>
+ 		</details>
+ 
+ 	</div>
+
+
+  
+	
 </section>
 </aside>
 </div>
