--- a/scenarioA/services/my-account/MSCA/EI/latest-claim-status.html
+++ b/scenarioA/services/my-account/MSCA/EI/latest-claim-status.html
@@ -178,7 +178,7 @@
  		<details class="acc-group">
  			<summary class="wb-toggle tgl-tab" data-toggle='{"parent": ".accordion", "group": ".acc-group"}'>2018-11-30 - Decision Made <br> Claim Finalized</summary>
  			<div class="tgl-panel">
- 				<p>We have finalized your claim for Employment Insurance benefits. You can <a href="">view your latest claim information here</a>.</p><br><br>
+ 				<p>We have finalized your claim for Employment Insurance benefits. You can <a href="">view your latest claim information here</a>.</p><br>
 
 				<p>If you are required to submit reports, visit <a href="">Internet Reporting Service</a> to complete your reports.</p>
 
@@ -194,7 +194,7 @@
 				<ul>
 					<li>You’ll find our decision on this page</li>
 					<li>We’ll update your claim information</li>
-				</ul><br><br>
+				</ul><br>
 				<strong>Record of Employment</strong><br>
 				<p>Make sure you’ve requested your Record of Employment (ROEs) from your employer(s).</p><br><br>
 				<ul>
@@ -205,7 +205,7 @@
 					</ul>
 					<li>You can <a href="">view your ROEs here</a></li>
 				</ul>
-				<p>If your employer(s) submitted all of your ROEs, you don't need to take any further action.<br>For more information on ROEs and when they should be issued, see <a href="">information on Records of Employment.</a></p>
+				<p>If your employer(s) submitted all of your ROEs, you don't need to take any further action.<br><br>For more information on ROEs and when they should be issued, see <a href="">information on Records of Employment.</a></p>
 					
  			</div>
  		</details>
