--- a/scenarioA/services/my-account/MSCA/EI/latest-claim-status.html
+++ b/scenarioA/services/my-account/MSCA/EI/latest-claim-status.html
@@ -196,11 +196,11 @@
 					<li>We’ll update your claim information</li>
 				</ul><br>
 				<strong>Record of Employment</strong><br>
-				<p>Make sure you’ve requested your Record of Employment (ROEs) from your employer(s).</p><br><br>
+				<p>Make sure you’ve requested your Record of Employment (ROEs) from your employer(s).</p><br>
 				<ul>
 					<li>If your employer gave you <strong>paper</strong> ROEs, you don't need to take any futher action.</li>
 					<ul>
-						<li>visiting the <a href="">nearest Service Canada office; or</a></li>
+						<li>visiting the <a href="">nearest Service Canada office</a>; or</li>
 						<li>mailing them to Service Canada</li>
 					</ul>
 					<li>You can <a href="">view your ROEs here</a></li>
@@ -212,8 +212,32 @@
  
  	</div>
 
+	<h2>View past claim messages</h2>
+	<p>View historical messages of your past EI claims below (we introduced this feature in November 2016):</p>
+	<ul>
+		<li><a href="">Received - 2018-07-11</a></li>
+		<li><a href="">Received - 2017-11-17</a></li>
+		<li><a href="">Received - 2016-12-02</a></li>
+		<li><a href="">All past claim messages</a></li>
+	</ul>
+	<p><strong>Notes:</strong></p>
+	<ul>
+		<li>Past claims that started before November 2016 don't have historical messages</li>
+		<li>See <a href="">your past claim details</a> for more information on all of your past claims (such as payment amount and types of benefit)</li>
+	</ul>
+	
+	<h2>Related links</h2>
+	<ul>
+		<li><a href="">My latest claim details</a></li>
+		<li><a href="">My past claim details</a></li>
+		<li><a href="">My EI payment information</a></li>
+		<li><a href="">Records of Employment</a></li>
+		<li><a href="">Declare training or an absence from Canada</a></li>
+		<li><a href="">I made a mistake on my EI report</a></li>
+		<li><a href="">View EI publications</a></li>
+	</ul>
 
-  
+  	
 	
 </section>
 </aside>
