--- a/scenarioA/services/my-account/MSCA/EI/past-claims.html
+++ b/scenarioA/services/my-account/MSCA/EI/past-claims.html
@@ -153,8 +153,8 @@
   <p class="text-right">FIRST NAME  LAST NAME</p><br>
   <p>View details on your past claims such as payment details and type of benefits received.</p>
   
-   <table class="w3-table" border="1px">
-    <tr>
+   <table width="100%" border="1px">
+    <tr><center>
       <th>Start Date of Claim</th>
       <th>End Date of Claim</th>
       <th><a href="#">Past Claims Messages</a></th>
@@ -167,9 +167,10 @@
     <tr>
       <td><a href="#">February 22, 2014</a></td>
       <td>February 25, 2015</td>
-      <td>Past claims messages feature unavailable before November 2016</td>
+	    <td>Past claims messages feature unavailable before November 2016</td>
+	   </center>
     </tr>
-  </table>	
+  </table><br><br>	
   
   <a href="">Return to Employment Insurance main menu</a>
 	
